welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: not found: value x
			setPos(k-x,y)
                                 ^